Add Project Understanding section

--- a/src/FirstOSContribution.tex
+++ b/src/FirstOSContribution.tex
@@ -14,23 +14,38 @@
 
 % Here is the abstract.
 \begin{abstract}
-  The most important objective of the Software Engineering in Practice course was to familiarize with the real conditions of open source software development and to encourage the technologies used for this matter. In the meanwhile, that was a unique opportunity to co-operate with engineers that maintain the whole project through a Github repository and be a part of the development team.  
-	\end{abstract}
+  The most important objective of the Software Engineering in Practice (SEiP) course was to familiarize with the real conditions of open source software development and to encourage the technologies used for this matter. In the meanwhile, that was a unique opportunity to co-operate with engineers that maintain the whole project through a Github repository and be a part of the development team.  
+\end{abstract}
 %---
 
 \section*{Introduction}
-   This course has been a springboard for my academic career. Under the supervision of professor Diomidis Spinellis and the guidence of PhD candidate Antonis Gkortzis, I managed to gather knowledge and gain experience that will make up a solid foundation for my professional evolution in the field of Software Engineering.
+   Open Source software is a trend that is picking up momentum \cite{Forbes} and that is something my university is taking into serious consideration. Personally, SEiP has been a springboard for my academic career. Under the supervision of professor Diomidis Spinellis and the guidence of PhD candidate Antonis Gkortzis, I managed to gather knowledge and gain experience that will make up a solid foundation for my professional evolution in the field of Software Engineering.
 
-\section{Project understanding}
+\section{Project Understanding}
 
-\section{Kappa}
-  test
+\paragraph{}
+  This should have been the most critical phase of the whole process. Github offers a wide variety of projects to choose from, so you have to choose wisely and be very prudent. But once you do a thorough research, you should find something that fits you perfectly. And that's what happened with me.
   
+\paragraph{}
+  Jarvis by Sukeesh is an open source project, inspired by Tony's Stark AI system \cite{Jarvis} and is available for Linux, MacOS and Windows. In a few words, Jarvis is a simple personal assistant which works on the terminal and he can do many things such as tell you the weather, find restaurants near you and help you out with many types of calculations.
+
+\paragraph{}
+  To be able to understand the project structure, I dedicated a few days testing the features and reading the code and the contribution rules (checked out the PEP 8 guidlines for Python) in order to get familiar with it. In the beggining, chaos prevaled but as I was spending more time with it, it started becoming more clear. After 3 - 4 days, I was able to understand the code structure, so I thought that it's time to get my hands dirty.
+
+\section{Project Contribution}
+
+  
+  \subsection{}
+  
+\section{Internal \& External Communication}  
+ 
+% Use this for pictures
 \begin{figure}[tph!]
-\leftline{\includegraphics[totalheight=6cm]{favicon.png}}
+\centerline{\includegraphics[totalheight=6cm]{favicon.png}}
     \caption{used by}
     \label{fig:verticalcell}
 \end{figure}
+%-----
 
 \subsection{Something}
 
@@ -43,5 +58,27 @@
     Deliverable quality
     Organization in GitHub (wiki, issues, commits, branching)
     Reviewing Code Entries - code reviews
+    
+\begin{thebibliography}{9}
+
+\bibitem{Forbes} 
+Forbes - The trend to open source software and what it means for businesses and consumers.
+\\\texttt{https://www.forbes.com/sites/richardfinger/2014/02/04/the-trend
+-to-open-source-software-and-what-it-means-for-businesses-and-consumers}.
+
+\bibitem{Jarvis} 
+J.A.R.V.I.S | Iron Man Wiki
+\\\texttt{https://ironman.fandom.com/wiki/J.A.R.V.I.S.}.
+
+\bibitem{einstein} 
+Albert Einstein. 
+\textit{Zur Elektrodynamik bewegter K{\"o}rper}. (German) 
+[\textit{On the electrodynamics of moving bodies}]. 
+Annalen der Physik, 322(10):891–921, 1905.
+ 
+\bibitem{knuthwebsite} 
+Knuth: Computers and Typesetting,
+\\\texttt{http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html}
+\end{thebibliography}
   
 \end{document}
