Include some more images

--- a/src/FirstOSContribution.tex
+++ b/src/FirstOSContribution.tex
@@ -78,13 +78,39 @@
  
   \subsection{Development Team integration}
   
+    The first time I talked to this guys was through an issue I opened, discussing about a new feature I would like to see to Jarvis in the future.
+    
+\begin{figure}[tph!]
+\centerline{\includegraphics[totalheight=5cm]{testing.png}}
+  \caption{Discussing with DEV team about testing practices}
+  \label{fig:verticalcell}
+\end{figure}
+%-----
+  
   \subsection{Presentations}
   
-  \subsection{Quality of Deliverables}
+  You can find both of my progress presentations on the GitHub repository: \\
+  
+  \centerline{
+  \textbf{ionpetro/Software-Engineering-in-Practice-Final-Report}
+  }
   
   \subsection{GitHub handling}
   
+  Withing this course, apart from the coding, we gained valuable knowledge on Version Control Systems such as git. As you can see below, by the time I understood the value of such a tool, I haven't stop using it. Apart from that, I worked on windows-port branch (since I developed the plugin on Windows) and avoided to commit on master branch, which is basically used for production.
+  
+\begin{figure}[h]
+\centerline{\includegraphics[totalheight=5cm]{gitcommit.png}}
+  \caption{Github commits for 2019}
+  \label{fig:verticalcell}
+\end{figure}
+%-----
+
+  
+  
   \subsection{Code Review}
+  
+\section{Conclusion}
   
   
 \begin{thebibliography}{9}
