--- a/src/FirstOSContribution.tex
+++ b/src/FirstOSContribution.tex
@@ -116,7 +116,7 @@
   You can find both of my progress presentations on the GitHub repository: \\
   
   \centerline{
-  \textbf{ionpetro/Software-Engineering-in-Practice-Final-Report}
+  \textbf{ionpetro/Software-Engineering-in-Practice-Final-Report} \cite{git}
   }
   
   \subsection{GitHub handling}
@@ -141,28 +141,24 @@
 %-----
   
 \section{Conclusion}
-  
-  
+
+Contributing in an open Source Software was a valuable experience for me. Through this process I improved my coding skills, I met people who had similar interests and built public artifacts that helped me grow a reputation. Open source is a warm community is which people are coming back for years. \textbf{With this report, SEiP is coming to an end. What will stay though, is my willingness to contribute more to the open source community!}
+
 \begin{thebibliography}{9}
 
 \bibitem{Forbes} 
-Forbes - The trend to open source software and what it means for businesses and consumers.
+\textit{Forbes - The trend to open source software and what it means for businesses and consumers.}
 \\\texttt{https://www.forbes.com/sites/richardfinger/2014/02/04/the-trend
 -to-open-source-software-and-what-it-means-for-businesses-and-consumers}.
 
 \bibitem{Jarvis} 
-J.A.R.V.I.S | Iron Man Wiki
-\\\texttt{https://ironman.fandom.com/wiki/J.A.R.V.I.S.}.
+\textit{J.A.R.V.I.S | Iron Man Wiki}
+\\\texttt{https://ironman.fandom.com/wiki/J.A.R.V.I.S.}
 
-\bibitem{einstein} 
-Albert Einstein. 
-\textit{Zur Elektrodynamik bewegter K{\"o}rper}. (German) 
-[\textit{On the electrodynamics of moving bodies}]. 
-Annalen der Physik, 322(10):891–921, 1905.
+\bibitem{git}
+\textit{Original Github Repository}
+\\\texttt{https://github.com/ionpetro/Software-Engineering-in-Practice-Final-Report}
+
+\end{thebibliography} 
  
-\bibitem{knuthwebsite} 
-Knuth: Computers and Typesetting,
-\\\texttt{http://www-cs-faculty.stanford.edu/\~{}uno/abcde.html}
-\end{thebibliography}
-  
 \end{document}
