Fix typo on figure description

--- a/src/FirstOSContribution.tex
+++ b/src/FirstOSContribution.tex
@@ -60,12 +60,11 @@
   \centering
   \begin{minipage}[b]{0.9\textwidth}
     \includegraphics[width=\textwidth]{doc1.png}
-    \caption{Flower one.}
   \end{minipage}
   \hfill
   \begin{minipage}[b]{0.9\textwidth}
     \includegraphics[width=\textwidth]{doc2.png}
-    \caption{Flower two.}
+    \caption{Documentation on bmi plugin methods.}
   \end{minipage}
 \end{figure}
   
